添加百度地图示例

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>clock</title>
     <link rel="stylesheet" type="text/css" href="http://demo.ishowchina.com/apidemos/sourceLinks/style.css" />
-
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=xhQP2QykX8PAjDCkMF7MY08Fun7qk6C0"></script>
     <!--这行代码等同于下面的多个链接 立德地图-->
     <!--<script type="text/javascript" src="http://api.ishowchina.com/v4/webapi/js/auth?v=3.6.3&t=jsmap&ak=ec85d3648154874552835438ac6a02b2"></script>-->
 
