--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>clock</title>
+    <link rel="icon" href="http://doc.talkingdata.com/resource/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="http://demo.ishowchina.com/apidemos/sourceLinks/style.css" />
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=xhQP2QykX8PAjDCkMF7MY08Fun7qk6C0"></script>
     <!--这行代码等同于下面的多个链接 立德地图-->
